# reachy_ibvs

./: .gitignore  README.md
devel/: .catkin  local_setup.sh  setup.sh
src/: reachy.urdf
src/reachy_vel_control/: CMakeLists.txt  (+1 more)
src/reachy_vel_description/: CMakeLists.txt  package.xml
src/reachy_vel_description/launch/: check_urdf.launch  robotUrdfPserv.launch  rviz.launch
src/reachy_vel_description/meshes/: wrist-hand-visual1.stl
src/reachy_vel_description/src/: Transforms_base_hand_ball.cpp  Transforms_base_hand_ball.m  Transforms_base_wrist_hand.cpp  Transforms_base_wrist_hand.h  transform.cpp
src/reachy_vel_description/urdf/: frames.gv  full-reachy-w-open-bionics.urdf  kinect.urdf  leachy-hand.urdf  leachy.urdf  reachy.urdf
src/reachy_vel_moveit/: CMakeLists.txt
src/reachy_vel_moveit/config/: Reachy.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
src/reachy_vel_moveit/launch/: Reachy_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/reachy_vel_moveit/src/: Jacobians_base_hand_ball.cpp  Jacobians_base_hand_ball.h  Jacobians_base_wrist_hand.cpp  Jacobians_base_wrist_hand.h  jacobian.cpp
(+57 files in other folders)
